# Lizardcode

./: CMakeLists.txt  README.md  partition.csv  sdkconfig.defaults
components/LovyanGFX/: CMakeLists.txt  LGFX_Config.hpp  LovyanGFX.cpp
components/bluetooth_service/: CMakeLists.txt  bluetooth_service.c  bluetooth_service.h
components/gt911_touch/: CMakeLists.txt  gt911.c  gt911.h
components/i18n_service/: CMakeLists.txt  i18n_service.c  i18n_service.h
components/lvgl/: CMakeLists.txt  README.md  lv_conf.h
components/lvgl_keyboard/: CMakeLists.txt  lvgl_keyboard.c  lvgl_keyboard.h
components/lvgl_port/: CMakeLists.txt  lvgl_port.cpp  lvgl_port.h
components/lvgl_theme/: CMakeLists.txt  lvgl_theme.c  lvgl_theme.h
components/ota_service/: CMakeLists.txt  ota_service.c  ota_service.h
components/storage_service/: CMakeLists.txt  storage_service.c  storage_service.h
components/ui_manager/: CMakeLists.txt  ui_manager.c  ui_manager.h
components/ui_pages/: CMakeLists.txt
components/ui_pages/console_debug_page/: CMakeLists.txt  console_debug_page.c  console_debug_page.h
components/ui_pages/file_explorer_page/: CMakeLists.txt  file_explorer_page.c  file_explorer_page.h
components/ui_pages/home_page/: CMakeLists.txt  home_page.c  home_page.h
components/ui_pages/settings_page/: CMakeLists.txt  settings_page.c  settings_page.h
components/ui_pages/wifi_bt_page/: CMakeLists.txt  wifi_bt_page.c  wifi_bt_page.h
components/wifi_service/: CMakeLists.txt  (+2 more)
main/: CMakeLists.txt  battery_manager.c  battery_manager.h  ble_manager.c  ble_manager.h  can_manager.c  can_manager.h  diagnostics.c  diagnostics.h  expander_ch422g.c  expander_ch422g.h  gpio_manager.c  gpio_manager.h  language_manager.c  language_manager.h  lcd_manager.c  lcd_manager.h  main.c  rs485_manager.c  rs485_manager.h  rtc_manager.c  rtc_manager.h  storage_manager.c  storage_manager.h  test_extension.c  test_extension.h  touch_manager.c  touch_manager.h  ui.c  ui.h  wifi_manager.c  wifi_manager.h
scripts/: extension_demo.c  test_io.sh
(+8 files in other folders)
