idf_component_register(SRCS "main.c"
                       "ui.c"
                       "lcd_manager.c"
                       "touch_manager.c"
                       "expander_ch422g.c"
                       "wifi_manager.c"
                       "ble_manager.c"
                       "rs485_manager.c"
                       "can_manager.c"
                       "gpio_manager.c"
                       "storage_manager.c"
                       "diagnostics.c"
                       "language_manager.c"
                       "battery_manager.c"
                       "rtc_manager.c"
                       "test_extension.c"
                       INCLUDE_DIRS ".")
